# ppaass-v3

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/cli/: Cargo.toml
agent/cli/src/: main.rs
agent/core/: Cargo.toml
agent/core/src/: config.rs  error.rs  lib.rs
agent/core/src/tunnel/: mod.rs
agent/core/src/tunnel/client/: http.rs  socks5.rs
agent/gui/: Cargo.toml
agent/gui/src-tauri/: tauri.conf.json
agent/resources/: config.toml
agent/resources/user/user1/: userinfo.toml
agent/src/: command.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
agent/src/tunnel/: mod.rs
agent/src/tunnel/client/: http.rs  mod.rs  socks4.rs  socks5.rs
agent/ui/: Cargo.toml  package-lock.json  package.json
agent/ui-windows/: Cargo.toml
agent/ui-windows/src/: app.rs
agent/ui/src/: App.vue  main.ts
agent/ui/src-tauri/: tauri.conf.json
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs  server.rs
common/src/connection/: agent.rs  mod.rs  proxy.rs
common/src/connection/codec/: crypto.rs  mod.rs
common/src/connection/codec/handshake/: request.rs  response.rs
common/src/connection/codec/tunnel/: mod.rs  request.rs  request_response.rs  response_request.rs
common/src/connection/proxy/: connection.rs  mod.rs  pool.rs
common/src/crypto/: aes.rs  blowfish.rs  mod.rs  rsa.rs
common/src/user/: mod.rs
common/src/user/repo/: fs.rs  mod.rs
ppaass-v3-agent-cli/: Cargo.toml
ppaass-v3-agent-cli/src/: main.rs
ppaass-v3-agent-core/: Cargo.toml
ppaass-v3-agent-core/src/: config.rs  error.rs  lib.rs
ppaass-v3-agent-core/src/tunnel/: mod.rs
ppaass-v3-agent-core/src/tunnel/client/: http.rs  socks5.rs
ppaass-v3-agent-ui/src/: App.vue
ppaass-v3-agent-ui/src-tauri/: Cargo.toml
ppaass-v3-agent-ui/src-tauri/src/: lib.rs  main.rs  vo.rs
ppaass-v3-agent-ui/src/bo/: configuration.ts
ppaass-v3-common/: Cargo.toml
ppaass-v3-common/src/: config.rs  event.rs  lib.rs  server.rs
ppaass-v3-common/src/connection/: agent.rs  mod.rs
ppaass-v3-common/src/connection/codec/handshake/: request.rs  response.rs
ppaass-v3-common/src/connection/proxy/: pool.rs
ppaass-v3-common/src/crypto/: blowfish.rs  mod.rs  rsa.rs
ppaass-v3-proxy-cli/: Cargo.toml
ppaass-v3-proxy-cli/resources/: config.toml
ppaass-v3-proxy-cli/src/: main.rs
ppaass-v3-proxy-core/: Cargo.toml
ppaass-v3-proxy-core/src/: config.rs  lib.rs
ppaass-v3-proxy-core/src/tunnel/: mod.rs
ppaass-v3-proxy-core/src/tunnel/destination/: mod.rs
ppaass-v3-proxy-resources/: config.toml
ppaass-v3-proxy-tool/: Cargo.toml
ppaass-v3-proxy-tool/src/: config.rs  crypto.rs
ppaass-v3-proxy-tool/src/handler/: generate_user.rs
ppaass-v3-script/: concrete-start-proxy.sh  install-v3.sh  start-proxy.sh
protocol/: Cargo.toml
protocol/src/: error.rs  hex.rs  lib.rs  message.rs
protocol/src/common/: mod.rs
proxy/: Cargo.toml
proxy-tool/: Cargo.toml
proxy-tool/src/: command.rs  config.rs  crypto.rs  lib.rs
proxy-tool/src/handler/: generate_rsa.rs  generate_user.rs  mod.rs
proxy/cli/: Cargo.toml
proxy/cli/src/: command.rs  main.rs
proxy/core/: Cargo.toml
proxy/core/src/: config.rs  error.rs  lib.rs  user.rs
proxy/core/src/tunnel/: mod.rs
proxy/core/src/tunnel/destination/: mod.rs  tcp.rs  udp.rs
proxy/resources/: config-forward1.toml  config-forward2.toml  config-forward3.toml  config.toml
proxy/resources/agent_user/proxy_forward_user1/: userinfo.toml
proxy/resources/agent_user/user1/: userinfo.toml
proxy/resources/forward_user/proxy_forward_user1/: userinfo.toml
proxy/src/: command.rs  config.rs  crypto.rs  error.rs  main.rs  server.rs  user.rs
proxy/src/tunnel/: mod.rs
proxy/src/tunnel/agent/: codec.rs  connection.rs
proxy/src/tunnel/destination/: mod.rs  tcp.rs  udp.rs
proxy/tool/: Cargo.toml
proxy/tool/src/: command.rs
proxy/tool/src/handler/: mod.rs
script/: concrete-start-proxy.sh  install-v3.sh  start-agent.bat  start-proxy.sh
server/: Cargo.toml
server/src/: command.rs  config.rs  error.rs  main.rs  rsa.rs  server.rs
server/src/tunnel/: mod.rs
server/src/tunnel/agent/: codec.rs  connection.rs  mod.rs
server/src/tunnel/destination/: mod.rs  tcp.rs  udp.rs
tool/: Cargo.toml
tool/src/: command.rs  crypto.rs  main.rs
