[workspace]
members = ["agent", "common", "protocol", "proxy", "proxy-tool"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[workspace.dependencies]
tokio = "1.43.0"
hyper = "1.5.2"
hyper-util = "0.1.0"
futures = "0.3.31"
thiserror = "2.0.11"
clap = "4.5.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
uuid = "1.12.1"
serde = "1.0.217"
accessory = "2.0.0"
tokio-util = "0.7.13"
futures-util = "0.3.31"
rand = "0.9.0"
rand_core = "0.9.0"
aes = "0.8.4"
blowfish = "0.9.1"
rsa = "0.9.7"
cipher = "0.4.4"
bincode = "1.3.3"
toml = "0.8.19"
http-body-util = "0.1"
tower = "0.5.2"
socks5-impl = "0.6.1"
hex = "0.4.3"
chrono = "0.4.39"
async-trait = "0.1.85"
tokio-tfo = "0.3.1"
mimalloc = "0.1.43"
bytes = "1.10.0"
cbc = "0.1.2"
anyhow = "1.0.95"
zip = "2.2.2"