[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ppaass-common = { path = "../common", package = "common" }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
accessory = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures-util = { workspace = true, features = ["sink"] }