[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
ppaass-common = { path = "../common", package = "common" }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
accessory = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
socks5-impl = { workspace = true, features = ["tokio"] }
tokio-tfo = { workspace = true }
mimalloc = { workspace = true }