[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ppaass-protocol = { package = "protocol", path = "../protocol" }
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
rsa = { workspace = true }
cipher = { workspace = true, features = ["block-padding", "alloc"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
tracing-appender = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true }
hyper = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures-util = { workspace = true, features = ["sink"] }