[package]
name = "ppaass-v3-common"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ppaass v3 common"

[dependencies]
ppaass-protocol = { package = "ppaass-v3-protocol", version = "0.1.0" }
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
aes = { workspace = true }
blowfish = { workspace = true }
rsa = { workspace = true, features = ["getrandom"] }
cipher = { workspace = true, features = ["block-padding", "alloc"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
tracing-appender = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true, features = ["serde"] }
hyper = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "io", "io-util"] }
futures-util = { workspace = true, features = ["sink"] }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
toml = { workspace = true }
accessory = { workspace = true }
zip = { workspace = true }
