[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ppaass-common = { path = "../common", package = "common" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
accessory = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-util = { workspace = true, features = ["codec"] }
futures-util = { workspace = true, features = ["sink"] }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }