[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
ppaass-common = { path = "../../common", package = "common" }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
accessory = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
socks5-impl = { workspace = true, features = ["tokio"] }

