[package]
name = "agent-ui-windows"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "ppaass_agent_ui_windows"

[[bin]]
path = "src/bin/start.rs"
name = "agent-ui"

[dependencies]
nwg = { workspace = true, package = "native-windows-gui" }
nwd = { workspace = true, package = "native-windows-derive" }
