[package]
name = "proxy-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-common = { path = "../../common", package = "common" }
ppaass-proxy-core = { path = "../core", package = "proxy-core" }
mimalloc = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tokio-tfo = { workspace = true }