[package]
name = "proxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-common = { path = "../../common", package = "common" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
accessory = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
futures-util = { workspace = true, features = ["sink"] }
bincode = { workspace = true }
tokio-tfo = { workspace = true }
async-trait = { workspace = true }