[package]
name = "ppaass-v3-proxy-tool"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/bin/start.rs"
name = "proxy-tool"

[dependencies]
ppaass-common = { version = "0.1.1", package = "ppaass-v3-common" }
clap = { version = "4.5.37", features = ["derive"] }
anyhow = { version = "1.0.98" }
toml = { version = "0.8.20" }
serde = { version = "1.0.219", features = ["derive"] }
accessory = { version = "2.0.0" }
chrono = { version = "0.4.40" }
zip = { version = "2.6.1" }